--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,37 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap');
+
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.App {
+  width: 100%;
+  min-height: 100vh;
+}
+
+.SignIn {
+  width: 100%;
+  min-height: 100vh;
+  display: grid;
+  place-items: center;
+  padding: 0 28px;
+  margin-top: -10%;
+}
+
+
+
+@media screen and (min-width: 640px) {
+  
+  .App {
+    width: 640px;
+    margin: 0 auto;
+  }
+
 }
