--- a/src/components/UI/buttons/signButton/SignButton.module.css
+++ b/src/components/UI/buttons/signButton/SignButton.module.css
@@ -8,6 +8,7 @@
     background: #1877F2;
     border: none;
     border-radius: 4px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     padding: 14px;
     cursor: pointer;
 }
@@ -15,5 +16,6 @@
 .button:disabled {
     color: rgba(255, 255, 255, 0.6);
     background: rgba(24, 119, 242, 0.6);
+    box-shadow: none;
     cursor: not-allowed;
 }
